--- a/index.html
+++ b/index.html
@@ -2,6 +2,11 @@
 <html lang="ko">
 
 <head>
+    <link rel="apple-touch-icon" href="프리톡로고.png">
+    <link rel="icon" href="프리톡로고.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="theme-color" content="#6e8efb">
     <meta charset="UTF-8">
     <title>프리톡 (Free Talk)</title>
     <style>
