--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 
 <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="UTF-8">
     <title>프리톡 (Free Talk)</title>
 
@@ -175,10 +176,12 @@
             gap: 10px;
             padding: 15px;
             position: fixed;
-            bottom: 50px !important;
+            bottom: 20px !important;
+            /* 모바일 하단 여백 최적화 */
             left: 50%;
             transform: translateX(-50%);
-            width: 90%;
+            width: 95%;
+            /* 너비를 조금 더 넓게 */
             max-width: 450px;
             background: white;
             border-radius: 30px;
