--- a/index.html
+++ b/index.html
@@ -35,7 +35,10 @@
             padding: 30px;
             border-radius: 20px;
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
-            width: 380px;
+
+            /* [수정] 고정값 380px 대신 90%를 써서 폰 화면에 꽉 차게 합니다 */
+            width: 90%;
+            max-width: 400px;
             text-align: center;
         }
 
