--- a/index.html
+++ b/index.html
@@ -38,16 +38,18 @@
 
         .room-container {
             background: white;
-            padding: 20px;
-            /* 패딩을 살짝 줄이면 여유가 생깁니다 */
+            padding: 30px;
             border-radius: 20px;
+            /* 이 둥근 모서리가 잘 보이게 하려면 */
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 
-            /* [수정] 고정값 380px을 지우고 아래처럼 바꾸세요 */
-            width: 90%;
-            /* 화면 너비의 90%만 차지해라 */
-            max-width: 380px;
-            /* 대신 아무리 커져도 380px은 넘지 마라 */
+            /* [수정 포인트] 90%에서 85% 정도로 살짝 더 줄여줍니다 */
+            width: 85%;
+            max-width: 360px;
+            /* 모바일에서 박스가 너무 커지는 것도 방지 */
+
+            /* [추가] 박스 크기 계산 방식을 변경 (테두리/패딩 때문에 안 넘치게) */
+            box-sizing: border-box;
 
             text-align: center;
         }
