--- a/index.html
+++ b/index.html
@@ -41,19 +41,33 @@
             padding: 20px 0;
         }
 
+        #list-area div[style*="display:flex"] {
+            width: 100%;
+            box-sizing: border-box;
+            gap: 8px !important;
+            /* 간격을 살짝 줄임 */
+        }
+
+        #new-room-input {
+            width: 70% !important;
+            /* 입력창 비중 조절 */
+            min-width: 0;
+            /* 찌그러짐 방지 */
+        }
+
         .room-container {
             background: white;
-            padding: 30px;
+            padding: 25px;
+            /* 패딩을 살짝 줄여서 내부 공간을 확보합니다 */
             border-radius: 20px;
-            /* 이 둥근 모서리가 잘 보이게 하려면 */
             box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
 
-            /* [수정 포인트] 90%에서 85% 정도로 살짝 더 줄여줍니다 */
-            width: 85%;
-            max-width: 360px;
-            /* 모바일에서 박스가 너무 커지는 것도 방지 */
+            /* [수정] 아까 좋았던 너비로 고정하되, 화면보다 커지진 않게 설정 */
+            width: 380px;
+            max-width: 92%;
+            /* 폰 화면 양옆에 아주 살짝 여백을 줘서 둥근 모서리 살림 */
 
-            /* [추가] 박스 크기 계산 방식을 변경 (테두리/패딩 때문에 안 넘치게) */
+            /* [핵심] 패딩이 너비에 포함되게 해서 밖으로 안 터지게 함 */
             box-sizing: border-box;
 
             text-align: center;
