--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
     </div>
 
     <div id="footer-bar">
-        문의 <strong>제이투코어(J2CORE)</strong> 대표 <strong>정준용</strong> | <a href="mailto:jjyong3872@naver.com" style="color:#0984e3; text-decoration:none; font-weight:bold;">jjyong3872@naver.</a>
+        문의 <strong>제이투코어(J2CORE)</strong> 대표 <strong>정준용</strong> | <a href="mailto:jjyong3872@naver.com" style="color:#0984e3; text-decoration:none; font-weight:bold;">jjyong3872@naver.com</a>
     </div>
 
     <div id="context-menu">
