--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
 
     <link rel="manifest" href="/manifest.json">
 
+    <link rel="icon" href="프리톡로고.png" type="image/png">
     <link rel="apple-touch-icon" href="프리톡로고.png">
-    <link rel="icon" href="프리톡로고.png">
+    <link rel="apple-touch-icon-precomposed" href="프리톡로고.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="theme-color" content="#6e8efb">
